music links for remaining dance styles
Added URL music for Foxtrot, Rhumba, Cha-cha, Swing.
Music option setting now saves

--- a/index.html
+++ b/index.html
@@ -276,6 +276,94 @@
 			  "title": "Al compás del corazón",
 			  "url": "https://archive.org/download/Elkintangohomework/09%20Al%20comp%C3%A1s%20del%20coraz%C3%B3n%20-%20Miguel%20Cal%C3%B3%20c.%20Ra%C3%BAl%20Ber%C3%B3n%20(1942).mp3"
 			}
+		  ],
+		  "Rhumba": [
+			{
+			  "title": "Cuatro Personas",
+			  "url": "https://archive.org/download/78_cuban-rhythms_hotel-nacional-orchestra-beltran_gbia0002479/Cuatro%20Personas%20-%20Hotel%20Nacional%20Orchestra-restored.mp3"
+			},
+			{
+			  "title": "Dulce Desengano",
+			  "url": "https://archive.org/download/78_cuban-rhythms_hotel-nacional-orchestra-beltran_gbia0002479/Dulce%20Desengano%20-%20Hotel%20Nacional%20Orchestra-restored.mp3"
+			}
+		  ],
+		  "Foxtrot": [
+			{
+			  "title": "Singing in the Rain",
+			  "url": "https://archive.org/download/78_let-a-smile-be-your-umbrella-on-a-rainy-day_murray-kellner-freed-brown_gbia0095027/01%20-%20Singing%20in%20the%20Rain%20-%20Murray%20Kellner%20-%20Freed.mp3"
+			},
+			{
+			  "title": "Rain",
+			  "url": "https://archive.org/download/78_let-a-smile-be-your-umbrella-on-a-rainy-day_murray-kellner-freed-brown_gbia0095027/03%20-%20Rain%20-%20Murray%20Kellner%20-%20Eugene%20Ford.mp3"
+			},
+			{
+			  "title": "That Get It, Mr. Joe",
+			  "url": "https://archive.org/download/78_that-get-it-mr-joe_fats-waller-and-his-rhythm-fats-waller-james-p-johnson_gbia0100455a/That%20get%20it%2C%20Mr.%20Joe%20-%20%22Fats%22%20Waller%20and%20his%20Rhythm.mp3"
+			},
+			{
+			  "title": "Hot Spot Blues",
+			  "url": "https://archive.org/download/78_hot-spot-blues_leo-mathisens-orkester-leo-mathisen-erik-parker_gbia7025555a/HOT%20SPOT%20BLUES%20-%20LEO%20MATHISENS%20ORKESTER%20-%20Leo%20Mathisen%20%26%20Erik%20Parker.mp3"
+			},
+			{
+			  "title": "Stormy Weather",
+			  "url": "https://archive.org/download/78_stormy-weather_leo-mathisens-band-helge-jacobsen-koehler-arlen_gbia7026217a/STORMY%20WEATHER%20-%20LEO%20MATHISEN%27S%20BAND%20-%20HELGE%20JACOBSEN.mp3"
+			}
+		  ],
+		  "Cha-Cha": [
+			{
+			  "title": "Baila Mi Chacha Cha",
+			  "url": "https://archive.org/download/78_baila-mi-chacha-cha_tito-puente-and-his-orchestra-e-duarte_gbia0101009b/Baila%20Mi%20Chacha%20Cha%20-%20Tito%20Puente%20and%20His%20Orchestra.mp3"
+			},
+			{
+			  "title": "Dansero",
+			  "url": "https://archive.org/download/lp_mambo_perez-prado-and-his-orchestra-tito-rodr/disc1%2F01.02.%20Dansero.mp3"
+			},
+			{
+			  "title": "Azuquito Con Leche",
+			  "url": "https://archive.org/download/lp_mambo_perez-prado-and-his-orchestra-tito-rodr/disc1%2F01.03.%20Azuquito%20Con%20Leche.mp3"
+			},
+			{
+			  "title": "Harvest Moon Cha Cha",
+			  "url": "https://archive.org/download/lp_cha-cha-festival_perez-prado-and-his-orchestra-pepito-pavon/disc1%2F01.03.%20Harvest%20Moon%20Cha%20Cha.mp3"
+			}
+		  ],
+		  "East Coast Swing": [
+			{
+			  "title": "A String Of Pearls",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F01.01.%20A%20String%20Of%20Pearls%20%28Glenn%20Miller%20Version%29.mp3"
+			},
+			{
+			  "title": "Don't Sit Under The Apple Tree",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F01.02.%20Don%27t%20Sit%20Under%20The%20Apple%20Tree%20%28Glenn%20Miller%20Version%29.mp3"
+			},
+			{
+			  "title": "Swing Low, Sweet Chariot",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F01.04.%20Swing%20Low%2C%20Sweet%20Chariot%20%28Tommy%20Dorsey%20Version%29.mp3"
+			},
+			{
+			  "title": "Flying Home",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F01.05.%20Flying%20Home%20%28Lionel%20Hampton%20Version%29.mp3"
+			},
+			{
+			  "title": "Jersey Bounce",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F02.01.%20Jersey%20Bounce%20%28Benny%20Goodman%20Version%29.mp3"
+			},
+			{
+			  "title": "Basie Boogie",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F02.03.%20Basie%20Boogie%20%28Count%20Basie%20Version%29.mp3"
+			},
+			{
+			  "title": "Charleston Alley",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F02.04.%20Charleston%20Alley%20%28Charley%20Barnet%20Version%29.mp3"
+			},
+			{
+			  "title": "Air Mail Special",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc1%2F02.05.%20Air%20Mail%20Special%20%28Benny%20Goodman%20Version%29.mp3"
+			},
+			{
+			  "title": "9:20 Special",
+			  "url": "https://archive.org/download/lp_the-swing-era-the-music-of-1941-1942-sw_various_0/disc2%2F03.01.%209%3A20%20Special%20%28Count%20Basie%20Version%29.mp3"
+			}
 		  ]
 		}
 		
@@ -339,6 +427,10 @@
             autoDrillSlider.value = autoDrillSliderSetting || 5;
             sliderValueDisplay.textContent = autoDrillSlider.value;
 			autoDrillSecondsLeft.textContent = autoDrillSlider.value;
+			
+			const playMusicSetting = localStorage.getItem('playMusic');
+            playMusicCheckbox.checked = playMusicSetting === 'true';
+			
 
             toggleAutoDrillSettings();
 
@@ -377,6 +469,7 @@
 				currentSongTitle.textContent = '';
 				currentSong = null;
 			}
+			saveSettings();
 		});
 
 
@@ -628,6 +721,7 @@
 			
 			localStorage.setItem('autoDrill', autoDrillCheckbox.checked);
 			localStorage.setItem('autoDrillSlider', autoDrillSlider.value);
+			localStorage.setItem('playMusic', playMusicCheckbox.checked);
 			
 			
         }
