Add 2 new moves from oct 30
Cha cha: Chase Turns
East Coast Swing: Egg Beater

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
             "Cha-Cha": [
                 "Basic", "Progressive Basic", "Single CrossOver Break", 
                 "Double CrossOver Break", "Natural Underarm Turn", 
-                "2-Way Underarm Turn"
+                "2-Way Underarm Turn", "Chase Turns"
             ],
             "East Coast Swing": [
                 "Single Time Basic", "Double Time Basic", "Tripple Time Basic", 
-                "Release Break", "Underarm Turn", "Underarm with Man Turning"
+                "Release Break", "Underarm Turn", "Underarm with Man Turning", "Egg Beater"
             ]
         };
 
